# vcpkg-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
proto/: helloWorld.proto  messages.proto
src/: client_rpc_intellisense.cpp  min_char_window.cpp  static_views.hpp  variate.cpp  visit_transform.h
src/arcus/: CMakeLists.txt  example.cpp
src/asio-grpc/: CMakeLists.txt  dataProvider.cpp  main.cpp
src/braft/: CMakeLists.txt
src/brpc/: CMakeLists.txt  client.cpp  server.cpp
src/ecal/: CMakeLists.txt
src/gz/: CMakeLists.txt  generator_main.cc
src/libprotobuf-mutator/: CMakeLists.txt
src/libtorch/: CMakeLists.txt
src/mysql-connector-cpp/: CMakeLists.txt  example.cpp  example.proto
src/opentelemetry/: CMakeLists.txt  bind_tracer.hpp  main-copy.cpp  main.cpp  precompiledHeader.h  tracer_common.h
src/protobuf/: CMakeLists.txt  main.cpp
src/shogun/: CMakeLists.txt  main.cpp
src/srpc/: CMakeLists.txt  example.cpp  example.proto
src/tbb/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/upb/: CMakeLists.txt  main.cpp
triplets/: x64-windows-static-asan.cmake
